--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -7,8 +7,8 @@ brands:
 #  config_file: stoxmarket.yml
 #- name: otcapital
 #  config_file: otcapital.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: rimarkets
@@ -27,8 +27,8 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
 #- name: capitalmarketsbanc
