--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -25,14 +25,14 @@ brands:
 #  config_file: optionstars.yml
 #- name: uft
 #  config_file: uft.yml
-#- name: brokerz
-#  config_file: brokerz.yml
-#- name: 4xfx
-#  config_file: 4xfx.yml
+- name: brokerz
+  config_file: brokerz.yml
+- name: 4xfx
+  config_file: 4xfx.yml
 #- name: herdos
 #  config_file: herdos.yml
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 #- name: q8
 #  config_file: q8.yml
 #- name: 2mercados
@@ -43,16 +43,16 @@ brands:
 #  config_file: aztrades.yml
 #- name: bots
 #  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 #- name: xtraderfx
 #  config_file: xtraderfx.yml
 #- name: firstindex
 #  config_file: firstindex.yml
 #- name: coinstec
 #  config_file: coinstec.yml
-#- name: tradospot
-#  config_file: tradospot.yml
+- name: tradospot
+  config_file: tradospot.yml
 #- name: 24btcmarket
 #  config_file: 24btcmarket.yml
 #- name: marketsplus
