--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 #- name: itrader
 #  config_file: itrader.yml
 #- name: stoxmarket
@@ -19,17 +19,17 @@ brands:
 #  config_file: finmarket.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
 #- name: soarfx
 #  config_file: soarfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
