--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,14 +1,14 @@
 brands:
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 #- name: itrader
 #  config_file: itrader.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: otcapital
 #  config_file: otcapital.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
 #- name: rimarkets
@@ -19,8 +19,8 @@ brands:
 #  config_file: finmarket.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
 #- name: soarfx
 #  config_file: soarfx.yml
 #- name: kbcapitals
@@ -31,5 +31,5 @@ brands:
   config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
