--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -56,14 +56,14 @@ tests_config:
 #  tests:
 #    - test_add_interaction  # Adds an interaction for a client
 #    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-  class: AddEventTaskModule
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+#  class: AddEventTaskModule
+#  tests:
 #    - test_add_event
 #    - test_edit_event
 #    - test_delete_interaction
 #    - test_email_icon
-    - test_sms_icon
+#    - test_sms_icon
 #    - test_mass_edit_tasks
 #    - test_searching_by_columns
 
@@ -139,11 +139,11 @@ tests_config:
 #  tests:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-#  class: CreateNewCustomer
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
+  class: CreateNewCustomer
+  tests:
 #    - test_autoassign_create_new_lead
-#    - test_autoassign_create_new_customer
+    - test_autoassign_create_new_customer
 #- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
 #  class: AutoAssignModuleTest
 #  tests:
