--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -121,12 +121,12 @@ tests_config:
 #    - test_check_day_tab
 #    - test_check_month_tab
 #    - test_check_week_tab
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-#    - test_check_search_via_button # Check search using search button
+    - test_check_search_via_button # Check search using search button
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_compaigns_module.Test_Campaigns_Module
 #  class: CampaignsModuleTest
@@ -139,23 +139,23 @@ tests_config:
 #  tests:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-  class: CreateNewCustomer
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
+#  class: CreateNewCustomer
+#  tests:
 #    - test_autoassign_create_new_lead
-    - test_autoassign_create_new_customer
+#    - test_autoassign_create_new_customer
 #- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
 #  class: AutoAssignModuleTest
 #  tests:
 #    - test_perform_delete_rule
 
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
-  tests:
-    - test_create_workflows
-    - test_check_workflow_by_status
-    - test_check_workflow_by_country
-    - test_delete_workflow
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+#  class: WorkflowsModulesTest
+#  tests:
+#    - test_create_workflows
+#    - test_check_workflow_by_status
+#    - test_check_workflow_by_country
+#    - test_delete_workflow
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
