--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -9,14 +9,14 @@ tests_config:
 #    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
 #    - test_create_filter_trading_account_module
-#  #Leads
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-  class: TabLeadsModuleCRM
-  tests:
+###Leads
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+#  class: TabLeadsModuleCRM
+#  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
 #    - test_mass_assign_leads
-    - test_mass_edit_leads
+#    - test_mass_edit_leads
 #    - export_full_list #only for one process
 #    - export_select_records #only for one process
 #    - import_leads #only for one process
