--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -43,10 +43,10 @@ brands:
 #  config_file: brokerz.yml
 #- name: q8
 #  config_file: q8.yml
-#- name: kontofx
-#  config_file: kontofx.yml
-- name: ptbanc
-  config_file: ptbanc.yml
+- name: kontofx
+  config_file: kontofx.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 
 
