--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -6,13 +6,13 @@ tests_config:
   tests:
     - test_check_sign_up
 #    - test_registred_client_exist_in_crm
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-  class: AddNewAccountTestCA
-  tests:
-    - test_add_live_account_ca
-    - test_add_demo_account_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
 #    - test_verify_accounts_in_crm
-    - test_switch_between_accounts_ca
+#    - test_switch_between_accounts_ca
 #- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
 #  class: PersonalDetailsUpdateTestCA
 #  tests:
@@ -26,10 +26,10 @@ tests_config:
 #    - test_create_ticket
 #    - test_check_and_update_ticket_in_crm
 #    - test_check_updated_ticket_in_ca
-#- module: src.test.python.ui.automation.implementation.ca.Test_Upload_Documents
-#  class: UploadDocumentTestCa
-#  tests:
-#    - test_upload_document_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Upload_Documents
+  class: UploadDocumentTestCa
+  tests:
+    - test_upload_document_ca
 #    - test_check_and_update_document_in_crm
 #    - test_check_document_status_in_ca
 
