--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,9 +3,11 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
-    - test_edit_event_my_dashboard
-    - test_email_icon
-    - test_sms_icon
+#    - test_edit_event_my_dashboard
+#    - test_email_icon
+#    - test_sms_icon
+#    - test_sorting_columns
+    - test_searching_by_columns
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModules
