--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -7,7 +7,7 @@ tests_config:
 #    - test_email_icon
 #    - test_sms_icon
     - test_sorting_columns
-    - test_searching_by_columns
+#    - test_searching_by_columns
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModules
