--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,9 +4,9 @@ tests_config:
   class: MyDashboardActionsTest
   tests:
 #    - test_edit_event_my_dashboard
-#    - test_email_icon
+    - test_email_icon
 #    - test_sms_icon
-    - test_sorting_columns
+#    - test_sorting_columns
 #    - test_searching_by_columns
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
