--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,6 +1,8 @@
 brands:
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
+- name: brokerxp
+  config_file: brokerxp.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
 #- name: mlnfx
