--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,8 +1,8 @@
 brands:
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #
