--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,8 +3,8 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
-    - test_edit_event_my_dashboard
-#    - test_email_icon
+#    - test_edit_event_my_dashboard
+    - test_email_icon
     - test_sms_icon
     - test_sorting_columns
     - test_searching_by_columns
@@ -71,7 +71,7 @@ tests_config:
 #    - test_add_event
 #    - test_edit_event
 #    - test_delete_interaction
-#    - test_email_icon
+    - test_email_icon
     - test_sms_icon
     - test_mass_edit_tasks
     - test_searching_by_columns
