--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
-
+#
 - module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
   class: MyDashboardActionsTest
   tests:
-#    - test_edit_event_my_dashboard
+    - test_edit_event_my_dashboard
     - test_email_icon
     - test_sms_icon
     - test_sorting_columns
     - test_searching_by_columns
-
+#
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
   class: CheckModules
   tests:
@@ -30,7 +30,7 @@ tests_config:
     - test_create_filter_leads_module
     - test_create_filter_help_desk
     - test_create_filter_trading_account_module
-#  Leads
+  Leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
@@ -53,7 +53,7 @@ tests_config:
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
-####Clients
+###Clients
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
